changed formatted to 1.7 java String.format