@@ -27,7 +27,8 @@ public class Message {
         switch (type) {
             case PublicMessage:
                 ControlSequence senderUserColor = sgr.apply(Integer.toString(senderUser.getColorIndex()));
-                return "%s%s%s:%s".formatted(senderUserColor.toString(), senderUser.getUserName(), reset.toString(),
+                return String.format("%s%s%s:%s", senderUserColor.toString(), senderUser.getUserName(),
+                        reset.toString(),
                         content);
             case PrivateMessage:
                 // TODO: implement private messages style
@@ -35,7 +36,7 @@ public class Message {
             case CommandMessage:
                 ControlSequence bold = sgr.apply("1");
                 // TODO: dynamic room name
-                return "%s%s%s:%s".formatted(bold.toString(), "Room", reset.toString(),
+                return String.format("%s%s%s:%s", bold.toString(), "Room", reset.toString(),
                         content);
             default:
                 // TODO: this default can't really happen
